security: move GraphQL URL to environment and restrict CORS